<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkpurple"
        android:padding="10dip">

        <TextView
            android:id="@+id/LineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/LineText"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/About"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="[?]"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/ListLines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LineText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:prompt="@string/selectl"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/StationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ListLines"
            android:layout_marginTop="10dp"
            android:text="@string/StationText"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/ListStations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/StationText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:prompt="@string/selects"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Legs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Body"
        android:background="@color/white"
        android:padding="10dip">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/StationCloseText1"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:text="@string/StationCloseText"
                    android:textColor="@color/darkpurple"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/StationClose"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|right"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:gravity="bottom|right"
                    android:textColor="@color/darkpurple"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/StationLastText1"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:text="@string/StationLastText"
                    android:textColor="@color/darkpurple"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/StationLast1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|right"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:gravity="bottom|right"
                    android:textColor="@color/darkpurple"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/StationLastText2"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:text="@string/StationLastText"
                    android:textColor="@color/darkpurple"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/StationLast2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|right"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:gravity="bottom|right"
                    android:textColor="@color/darkpurple"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
        <!--
                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dip"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-1789938912321349/6966866456" />-->

    </RelativeLayout>

</LinearLayout>